<resources>
    <string name="app_name">Material Design</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- navigation drawer: file names to link to  -->
    <string name="nav_item_home">Home</string>
    <string name="nav_item_articles">Articles</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_survey">Survey</string>
    <string name="nav_item_mentors">Mentors</string>
    <string name="nav_item_write_article">Write An Article</string>
    <string name="nav_item_log_in">Log In/Out</string>
    <string name="nav_item_log_out">Log Out</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_survey</item>
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_articles</item>
        <item>@string/nav_item_mentors</item>
        <item>@string/nav_item_write_article</item>
        <item>@string/nav_item_log_in</item>

        <!-- navigation drawer item Titles  -->
    </string-array>
    <string name="title_profile">Profile</string>
    <string name="title_survey">Survey</string>
    <string name="title_home">Home</string>
    <string name="title_articles">Articles</string>
    <string name="title_mentors">Mentors</string>
    <string name="title_write_article">Write An Article</string>
    <string name="title_confirm_article">Confirm Your Article</string>
    <string name="title_login">Log In/Out</string>
    <string name="not_logged_in_text">Not Logged In</string>



    <!-- Strings related to the Home Fragment -->
    <string name="homeTitleDisplay">Gakktu í Bæinn</string>
    <string name="text_announcement1_not_started">Please take our survey to enhance your experience.</string>
    <string name="text_announcement1_started"> Don\'t stop now! Please finish our survey. </string>
    <string name="text_announcement1_completed">Thanks for the info. Your profile has been updated.</string>
    <string name="survey_not_started_status">notStarted</string>
    <string name="survey_started_status">started</string>
    <string name="survey_completed_status">completed</string>
    <string name="home_fragment_tag">homeTag</string>
    <string name="static_announcement_2_text">Check out the newest Article in our Library:</string>
    <string name="placeholder_new_article_title">...gathering data...</string>

    <!-- Strings related to the Survey Fragment -->
    <string name="survey_yes_button_text">Yes</string>
    <string name="survey_no_button_text">No</string>
    <string name="survey_skip_button_text">Skip</string>
    <string name="survey_question_children">Do you have any children?</string>
    <string name="survey_question_employed">Are you currently employed?</string>
    <string name="survey_question_disabled">Are you (or a family member) disabled?</string>
    <string name="survey_question_citizenship">Are you interested in a path to Icelandic citizenship?</string>
    <string name="end_of_survey_message">Thank you for your participation. This concludes our survey.</string>
    <string name="end_of_survey_nav_text">View Profile</string>
    <string name="key_sp_survey_status">surveyStatus</string>
    <string name="preference_name_children">Children:</string>
    <string name="preference_name_employed">Employment:</string>
    <string name="preference_name_disabled">Disability:</string>
    <string name="preference_name_citizenship">Citizenship:</string>

    <!-- Strings related to the WriteArticle Fragment -->
    <string name="write_article_instruction_title_text">Title Your Article</string>
    <string name="write_article_instruction_body_text">Compose Article</string>
    <string name="write_article_instruction_confirm_text">Confirm and Save</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hint_article_title">Your Title Here</string>
    <string name="hint_article_body">Your Content Here</string>
    <string name="hint_article_image_URL">Your Image URL Here</string>
    <string name="article_category_instructions_text">Categorize Your Article:</string>
    <string name="action_cache">Cache</string>

    <!-- Strings for Mentor Fragment -->
    <string name="default_mentor_message">Messaging not available yet</string>
    <string name="email_subject_text">Message from Gakktu í Bæinn</string>

    <!-- Strings related to the ConfirmArticle Fragment -->
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="discard">Discard</string>
    <string name="article_to_confirm_title_text">User\'s Title Here</string>
    <string name="article_to_confirm_body_text">User\'s Text Body Here</string>
    <string name="confirm_article_header_text">Your article will appear like this.</string>

    <!-- Strings for interacting with SharedPreferences -->
    <string name="userProfilePreferences">userProfilePreferences</string>
    <string name="locallyStoredArticle">localArticle</string>
    <string name="loggedInUser">loggedInUser</string>

    <string name="userAvatar">userAvatar</string>

    <!-- Strings for Profile Fragment -->
    <string name="profile_title_text">YOUR PROFILE</string>
    <string name="user_pref_children_label_text">Children:</string>
    <string name="user_profile">UserProfile</string>
    <string name="profile_intro_text">All content will be filtered based on these attributes:</string>

    profile_intro_text

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for CategorySelector Fragment -->
    <string name="category_selector_name_text">Children</string>
    <string name="label_for_category_seek_bar">TestLabel</string>

    <!-- Strings for Article Fragment -->
    <string name="fullArticleToView">fullarticletoview</string>
    <string name="title_activity_fake_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_log_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>