<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.materialdesign.activity.WriteArticleFragment">

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/write_article_input_field_title"
        android:layout_height="100dp"
        android:layout_below="@id/label"
        android:layout_marginLeft="10dp"
        android:hint="@string/hint_article_title"
        android:inputType="textCapSentences"
        android:layout_marginRight="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/write_article_input_field_body"
        android:layout_height="100dp"
        android:layout_below="@id/write_article_input_field_title"
        android:layout_marginLeft="10dp"
        android:hint="@string/hint_article_body"
        android:inputType="textCapSentences|textMultiLine"
        android:scrollHorizontally="false"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/article_category_instructions"
        android:text="@string/article_category_instructions_text"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_below="@id/write_article_input_field_body"
        android:layout_centerHorizontal="true"
        android:textColor="@color/navigationBarColor"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/write_article_save_button"
        android:text="@string/save"
        android:layout_below="@id/article_category_instructions"
        android:layout_alignParentRight="true"
        android:background="@color/yes"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/write_article_cancel_button"
        android:text="@string/cancel"
        android:layout_below="@id/article_category_instructions"
        android:layout_alignParentLeft="true"
        android:background="@color/no"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        />

</RelativeLayout>
