<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.materialdesign.activity.ConfirmArticleFragment">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/article_to_confirm_title_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/article_to_confirm_title"
            android:text="@string/article_to_confirm_title_text"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="10dp"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/article_to_confirm_body_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp"
        card_view:cardCornerRadius="10dp"
        android:layout_below="@id/article_to_confirm_title_card"
        card_view:cardBackgroundColor="@color/colorPrimary"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/article_to_confirm_body"
            android:text="@string/article_to_confirm_body_text"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="10dp"/>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_article_confirm_button"
        android:text="@string/confirm"
        android:layout_below="@id/article_to_confirm_body_card"
        android:layout_alignParentRight="true"
        android:background="@color/yes"
        android:layout_margin="10dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_article_edit_button"
        android:text="@string/edit"
        android:layout_below="@id/article_to_confirm_body_card"
        android:layout_centerHorizontal="true"
        android:background="@color/skip"
        android:layout_margin="10dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_article_discard_button"
        android:text="@string/discard"
        android:layout_below="@id/article_to_confirm_body_card"
        android:layout_alignParentLeft="true"
        android:background="@color/no"
        android:layout_margin="10dp"
        />

</RelativeLayout>
